# dev-center

./: .gitignore  ci.ps1  deploy-backend.ps1  generate_icons.py  openapi-ts.config.ts  package.json  pom.xml  random.groovy  update-key.ps1
.github/workflows/: release-desktop.yml  release-local-server.yml
backend/: deploy.sh  docker-compose.yml  pom.xml
backend/common/: pom.xml
backend/local-server/: pom.xml
backend/local-server/scripts/: run.bat  run.sh
backend/remote-server/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  pom.xml  postgres-init.sh
frontend/: clean-install.ps1  package.json
frontend/apps/admin/: next.config.mjs  package.json
frontend/apps/admin/app/: layout.tsx
frontend/apps/desktop/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/apps/desktop/src/: App.tsx  main.tsx
frontend/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
frontend/apps/desktop/src-tauri/capabilities/: default.json
frontend/apps/desktop/src-tauri/icons/: icon.icns
frontend/apps/desktop/src-tauri/src/: lib.rs
frontend/apps/web/: next.config.mjs  package.json  wrangler.jsonc
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/binaries/: openapi.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: titlebar.tsx
src/lib/api/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
src/main/resources/: application-dev.properties  application-local.properties  application-postgres.properties  application.properties
(+175 files in other folders)
